@@ -5,7 +5,7 @@ on:
     branches: [main]
 jobs:
   build_shared_ubuntu:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       matrix:
         include:
