@@ -1,8 +1,8 @@
-AC_PREREQ( 2.59 )
+AC_PREREQ([2.71])
 
 AC_INIT(
  [libfsapfs],
- [20220529],
+ [20220709],
  [joachim.metz@gmail.com])
 
 AC_CONFIG_SRCDIR(
@@ -16,7 +16,7 @@ dnl Check for host type
 AC_CANONICAL_HOST
 
 dnl Check for libtool DLL support
-AC_LIBTOOL_WIN32_DLL
+LT_INIT([win32-dll])
 
 dnl Checks for programs
 AC_PROG_CC
@@ -26,7 +26,6 @@ AC_PROG_MAKE_SET
 AC_PROG_INSTALL
 
 dnl Check for libtool
-AC_PROG_LIBTOOL
 AC_SUBST(LIBTOOL_DEPS)
 
 dnl Check for pkg-config
@@ -34,7 +33,7 @@ AC_PATH_PROG(PKGCONFIG,[pkg-config])
 
 dnl Support of internationalization (i18n)
 AM_GNU_GETTEXT([external])
-AM_GNU_GETTEXT_VERSION([0.18.1])
+AM_GNU_GETTEXT_VERSION([0.21])
 
 dnl Check for compiler language support
 AC_C_CONST
