@@ -24,11 +24,11 @@
 
 #include <libfsapfs/types.h>
 
-#define LIBFSAPFS_VERSION		@VERSION@
+#define LIBFSAPFS_VERSION			@VERSION@
 
 /* The version string
  */
-#define LIBFSAPFS_VERSION_STRING	"@VERSION@"
+#define LIBFSAPFS_VERSION_STRING		"@VERSION@"
 
 /* The file access
  * bit 1        set to 1 for read access
@@ -37,22 +37,35 @@
  */
 enum LIBFSAPFS_ACCESS_FLAGS
 {
-	LIBFSAPFS_ACCESS_FLAG_READ	= 0x01,
+	LIBFSAPFS_ACCESS_FLAG_READ		= 0x01,
 /* Reserved: not supported yet */
-	LIBFSAPFS_ACCESS_FLAG_WRITE	= 0x02
+	LIBFSAPFS_ACCESS_FLAG_WRITE		= 0x02
 };
 
 /* The file access macros
  */
-#define LIBFSAPFS_OPEN_READ		( LIBFSAPFS_ACCESS_FLAG_READ )
+#define LIBFSAPFS_OPEN_READ			( LIBFSAPFS_ACCESS_FLAG_READ )
 /* Reserved: not supported yet */
-#define LIBFSAPFS_OPEN_WRITE		( LIBFSAPFS_ACCESS_FLAG_WRITE )
+#define LIBFSAPFS_OPEN_WRITE			( LIBFSAPFS_ACCESS_FLAG_WRITE )
 /* Reserved: not supported yet */
-#define LIBFSAPFS_OPEN_READ_WRITE	( LIBFSAPFS_ACCESS_FLAG_READ | LIBFSAPFS_ACCESS_FLAG_WRITE )
+#define LIBFSAPFS_OPEN_READ_WRITE		( LIBFSAPFS_ACCESS_FLAG_READ | LIBFSAPFS_ACCESS_FLAG_WRITE )
 
 /* The path segment separator
  */
-#define LIBFSAPFS_SEPARATOR		'/'
+#define LIBFSAPFS_SEPARATOR			'/'
+
+/* The file types
+ */
+enum LIBFSAPFS_FILE_TYPES
+{
+	LIBFSAPFS_FILE_TYPE_FIFO		= 0x1000,
+	LIBFSAPFS_FILE_TYPE_CHARACTER_DEVICE	= 0x2000,
+	LIBFSAPFS_FILE_TYPE_DIRECTORY		= 0x4000,
+	LIBFSAPFS_FILE_TYPE_BLOCK_DEVICE	= 0x6000,
+	LIBFSAPFS_FILE_TYPE_REGULAR_FILE	= 0x8000,
+	LIBFSAPFS_FILE_TYPE_SYMBOLIC_LINK	= 0xa000,
+	LIBFSAPFS_FILE_TYPE_SOCKET		= 0xc000
+};
 
 #endif /* !defined( _LIBFSAPFS_DEFINITIONS_H ) */
 
