@@ -67,6 +67,19 @@ enum LIBFSAPFS_ACCESS_FLAGS
  */
 #define LIBFSAPFS_SEPARATOR					'/'
 
+/* The file types
+ */
+enum LIBFSAPFS_FILE_TYPES
+{
+	LIBFSAPFS_FILE_TYPE_FIFO				= 0x1000,
+	LIBFSAPFS_FILE_TYPE_CHARACTER_DEVICE			= 0x2000,
+	LIBFSAPFS_FILE_TYPE_DIRECTORY				= 0x4000,
+	LIBFSAPFS_FILE_TYPE_BLOCK_DEVICE			= 0x6000,
+	LIBFSAPFS_FILE_TYPE_REGULAR_FILE			= 0x8000,
+	LIBFSAPFS_FILE_TYPE_SYMBOLIC_LINK			= 0xa000,
+	LIBFSAPFS_FILE_TYPE_SOCKET				= 0xc000
+};
+
 #endif /* !defined( HAVE_LOCAL_LIBFSAPFS ) */
 
 /* The compression methods
