@@ -1,4 +1,6 @@
 TODO
+* handle transaction identifier mismatch
+
 * fill attribute value_data_file_extents
 * complete snapshot support
 * extended attribute extent support
@@ -13,6 +15,7 @@ TODO
 ** Add resource fork support
 ** read zlib compressed resource fork data footer
 ** Check deflate compressed files edge case where first byte is 0x#f
+** add support for solaris and bsdos device numbers
 
 * add snapshot support
 ** add API function to retrieve creation time
